// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Stretches Vertically 1`] = `
<Card
  className=""
  hideOverflow={true}
  stretchVertically={true}
>
  <styled.div
    className=""
    hideOverflow={true}
    stretchVertically={true}
  >
    <div
      className="sc-AykKC jxtHeF"
    >
      <div>
        Hello Span
      </div>
    </div>
  </styled.div>
</Card>
`;

exports[`Card should renders the Card 1`] = `
<Card
  className=""
  hideOverflow={true}
  stretchVertically={false}
>
  <styled.div
    className=""
    hideOverflow={true}
    stretchVertically={false}
  >
    <div
      className="sc-AykKC iIMINq"
    >
      <div>
        Hello Span
      </div>
    </div>
  </styled.div>
</Card>
`;
